# ml-class

./: ml-class.cabal
src/: Week1.hs  Week2.hs  Week3.hs  Week4.hs  Week5.hs  Week6.hs  Week7.hs
