name:
  ml-class
version:
  0.1.0.0
synopsis:
  Initial project template from stack
description:
  Please see README.md
homepage:
  https://github.com/jxv/ml-class#readme
license:
  BSD3
license-file:
  LICENSE
author:
  Joe Vargas
maintainer:
  https://github.com/jxv
copyright:
  2016 Joe Vargas
category:
  Web
build-type:
  Simple
-- extra-source-files:
cabal-version:
  >= 1.10

library
  hs-source-dirs:
    src
  exposed-modules:
      Week1
    , Week2
    , Week3
    , Week4
    , Week5
    , Week6
    , Week7
  build-depends:
      base >= 4.7 && < 5
  default-language:
    Haskell2010

test-suite ml-class-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
      base
    , ml-class
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/githubuser/ml-class
